FIX: button text align

--- a/src/app/components/home/components/common-questions/common-questions.component.scss
+++ b/src/app/components/home/components/common-questions/common-questions.component.scss
@@ -32,6 +32,7 @@
 
         .btn-text {
             text-decoration: underline;
+            text-align: start;
         }
       }
 
